--- a/report/background.tex
+++ b/report/background.tex
@@ -1,5 +1,5 @@
 \section{Background and related work}
-Robert Gubkar and Michal Kuba \cite{6566278}  from the university of Zilinia in Slovakia
+Robert Gubkar and Michal Kuba\cite{6566278}  from the university of Zilinia in Slovakia
 conducted a study about comparision of audio features for elementary sound
 based audio classification. They compared two sets of audio features for classification
 of various sonds such as applause, crying, laugh, music, noise and speech.
@@ -28,7 +28,7 @@ around for a long time. So several different methods for this has been
 developed, in this project Periodogram was used for feature extraction and
 Case Based Reasoning was used for the decision making part.\\
 
-This paper from 2014 \cite{danne1} instead decided to use Spectrogram combined with
+This paper from 2014\cite{danne1} instead decided to use Spectrogram combined with
 Angular and Radial Transform (ART) for their feature extraction part. A
 Spectrogram is a 3D representation of a sound file. This gives a lot of
 potential features to extract but it is a lot harder to find and extract
@@ -49,7 +49,7 @@ Expectation-Maximization algorithms, each bird species will be represented as
 a combination of Gaussian Component probability density functions.\\
 
 Another paper that is not directly related to the work done in this project,
-but is very important to the area of signal identification as a whole is \cite{1566472}.
+but is very important to the area of signal identification as a whole is\cite{1566472}.
 Reconstruction of incomplete spectrograms for robust speech recognition, this
 paper details a method for gaining a more robust recognition of speech when the
 sound is corrupted by noise. When a signal is corrupted by noise some features
@@ -65,8 +65,17 @@ only works with stationary noise. Non-stationary noise is even more error prone.
  as completely unknown or treating them as unknown but bounded. Several
  different methods are introduced but the two most effective ones are cluster
  marginal reconstruction and covariance joint reconstruction.\\
- 
- 
 
-Paper \cite{6497946} present a method to reduce the number of fingerprints or cases by increasing the fingerprint size which will improve memory consumtion and serch time.
-"The proposed method uses the fingerprint extraction algorithm in time and frequency domains using wavelet transform. The audio signal was decomposed into 5-layer wavelet, and then calculated the energy distribution center, the energy of sub-band in wavelet domain, and the variance of wavelet coefficient. Finally, by using the results Calculated as the parameters of the audio fingerprints, the 8-bit fingerprint block per frame was generated" \cite{6497946}.
+
+
+Paper\cite{6497946} present a method to reduce the number of fingerprints or cases by increasing the fingerprint size which will improve memory consumtion and serch time.
+"The proposed method uses the fingerprint extraction algorithm in time and frequency domains using wavelet transform. The audio signal was decomposed into 5-layer wavelet, and then calculated the energy distribution center, the energy of sub-band in wavelet domain, and the variance of wavelet coefficient. Finally, by using the results Calculated as the parameters of the audio fingerprints, the 8-bit fingerprint block per frame was generated"\cite{6497946}.\\
+
+
+Chieh-Yuan Tsai Et. al. describe Case-based reasoning as a problem-solving technique
+commonly seen in artificial intelligence\cite{5169353}. "The K-nearest neighbor (KNN) search
+method which selects the K most similar prior cases for a new
+case has been extensively used in the case retrieval phase of
+CBR. Although KNN can be simply implemented, the choice of
+the K value is quite subjective and will influence the
+performance of a CBR system."
