--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -44,3 +44,55 @@ pages={308-312},
 keywords={acoustic signal processing;audio databases;audio watermarking;content-based retrieval;feature extraction;music;pattern matching;wavelet transforms;acoustic characteristics;audio data;audio database;audio information;audio quality;audio signal;audio summarization;computer technology;content-based compact signature;digital audio fingerprinting;feature extraction;fingerprint extraction;fingerprint matching algorithm;fingerprint size reduction;music files;query processing;song search;storage devices;wavelet transform;AWGN;Europe;Fingerprint recognition;Robustness;Wavelet domain;AWGN;Audio fingerprinting;Wavelet Decomposition;Wavelet Transform;Zero crossing rate},
 doi={10.1109/ICSIPR.2013.6497946},
 month={Feb},}
+
+@INPROCEEDINGS{7073944,
+author={M. Hansson-Sandsten and M. Tarka and J. Caissy-Martineau and B. Hansson and D. Hasselquist},
+booktitle={Signal Processing Conference, 2011 19th European},
+title={SVD-based classification of bird singing in different time-frequency domains using multitapers},
+year={2011},
+pages={966-970},
+keywords={bioacoustics;biology computing;feature extraction;signal classification;singular value decomposition;time-frequency analysis;SVD-based classification;Thomson multitapers;Welch method;bird singing;classification feature extraction;detecting syllables;doppler domains;locally stationary process multitapers;male great reed warblers;singular vectors;sonogram;syllable classification;time-frequency domains;Birds;Feature extraction;Kernel;Robustness;Spectrogram;Time-frequency analysis;Vectors},
+ISSN={2076-1465},
+month={Aug},}
+
+@INPROCEEDINGS{5360230,
+author={F. Briggs and R. Raich and X. Z. Fern},
+booktitle={Data Mining, 2009. ICDM '09. Ninth IEEE International Conference on},
+title={Audio Classification of Bird Species: A Statistical Manifold Approach},
+year={2009},
+pages={51-60},
+keywords={audio recording;audio signal processing;learning (artificial intelligence);signal classification;statistical analysis;support vector machines;telecommunication computing;Bayes risk-minimizing classifier;Fisher information metric;Hellinger metric;Kullback-Leibler divergence;audio classification;audio recording;bird species;nearest-neighbor classifier;probabilistic model;statistical manifold approach;supervised learning;support vector machines;Automobiles;Birds;Clustering algorithms;Costs;Data mining;Humans;Partitioning algorithms;Personnel;Training data;Vocabulary;audio;bayes;classification;clustering;codebook;geodesic;manifold;map;maximum a-posteriori;mfccs;nearest neighbor},
+doi={10.1109/ICDM.2009.65},
+ISSN={1550-4786},
+month={Dec},}
+
+@INPROCEEDINGS{7418412,
+author={K. Qian and Z. Zhang and F. Ringeval and B. Schuller},
+booktitle={2015 IEEE Global Conference on Signal and Information Processing (GlobalSIP)},
+title={Bird sounds classification by large scale acoustic features and extreme learning machine},
+year={2015},
+pages={1317-1321},
+keywords={acoustic signal processing;acoustics;learning (artificial intelligence);ELM;audio recordings;bird songs;bird sounds classification;bird species classification;chunked units;decision making;ecologists;extreme learning machine;feature space;large scale acoustic features;openSMILE toolkit;ornithologists;recognition task;sound signals;Acoustics;Audio recording;Birds;Feature extraction;Hidden Markov models;Support vector machines;Training;Bird Sounds;Extreme Learning Machine;ReliefF;openSMILE;p-centre},
+doi={10.1109/GlobalSIP.2015.7418412},
+month={Dec},}
+
+@INPROCEEDINGS{6123334,
+author={M. T. Lopes and L. L. Gioppo and T. T. Higushi and C. A. A. Kaestner and C. N. Silla Jr. and A. L. Koerich},
+booktitle={Multimedia (ISM), 2011 IEEE International Symposium on},
+title={Automatic Bird Species Identification for Large Number of Species},
+year={2011},
+pages={117-122},
+keywords={audio signal processing;biology computing;learning (artificial intelligence);audio recorded song;audio treatment;automatic bird species identification;automatic identification;bird monitoring;labeled database;machine learning;signal processing;Birds;Data mining;Databases;Feature extraction;Machine learning;Monitoring;Polynomials;bird species identification;machine learning;pattern recognition;signal processing},
+doi={10.1109/ISM.2011.27},
+month={Dec},}
+
+
+@INPROCEEDINGS{5169353,
+author={C. Y. Tsai and C. C. Chiu},
+booktitle={Computer Science and Information Technology - Spring Conference, 2009. IACSITSC '09. International Association of},
+title={Developing a Significant Nearest Neighbor Search Method for Effective Case Retrieval in a CBR System},
+year={2009},
+pages={262-266},
+keywords={case-based reasoning;expectation-maximisation algorithm;information retrieval;CBR system;K-nearest neighbor search method;KNN;artificial intelligence;case retrieval;case-based reasoning;dissimilarity distribution;expectation maximization algorithm;probability density function;problem-solving technique;significant nearest neighbor search method;statistics;Computer science;Conference management;Humans;Industrial engineering;Information retrieval;Nearest neighbor searches;Problem-solving;Search methods;Springs;Technology management;case-based reasoning;expectation maximization algorithm;nearest neighbor search;statistical inference},
+doi={10.1109/IACSIT-SC.2009.17},
+month={April},}
