--- a/report/main.tex
+++ b/report/main.tex
@@ -1,20 +1,18 @@
 \documentclass[conference, hidelinks]{IEEEtran}
 
-\usepackage{subfigure}
+
 \usepackage{hyperref}
 \usepackage[pdftex]{graphicx}
 \usepackage{lmodern}
 \usepackage[utf8]{inputenc}
 \usepackage{float} % laces the float at precisely the location in the LaTeX code
-\usepackage{rotating} % Rotate figures or tabels into landscap mode
 \usepackage{listings} % programming code syntax highlighting
-\usepackage{subfigure}
-\usepackage{amsmath} % Advanced math
-\usepackage{hhline}
 \usepackage{array}
-\usepackage{caption}
+%\usepackage{caption}
+\usepackage{subfig}
 \newcommand{\OneColumnWidth}{88.9mm}
-\captionsetup[table]{skip=10pt}
+%\captionsetup[table]{skip=10pt}
+\graphicspath{ {img/} }
 
 \begin{document}
 \input{title.tex}
