--- a/report/results.tex
+++ b/report/results.tex
@@ -4,6 +4,69 @@ been successful in many ways. The final version met all the initial requirements
 stated at the beginning of the project and the code has a low footprint while
 providing an adequate performance.
 
+
+
+\begin{figure}[htp]
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-0_0-0_0-0_0-0_0-1_0-0_0-0_0-0_0}
+    }
+
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-0_0-0_0-1_0-0_0-0_0-0_0-0_0-0_0}
+    }
+
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-0_0-0_0-1_0-0_0-1_0-0_0-0_0-0_0}
+    }
+
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-0_0-0_1-0_0-0_0-1_0-0_0-0_0-0_0}
+    }
+
+
+
+
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-0_0-1_0-0_0-0_0-1_0-0_0-0_0-0_0}
+    }
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-0_0-1_0-0_1-0_1-1_0-0_0-0_0-0_0}
+    }
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-0_0-1_0-1_0-0_0-0_0-0_0-0_0-0_0}
+    }
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-0_0-1_0-1_0-0_0-1_0-0_0-0_0-0_0}
+    }
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-1_0-1_0-1_0-1_0-1_0-0_0-0_0-0_0}
+    }
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-canberra-1_0-1_0-1_0-1_0-1_0-1_0-1_0-1_0}
+    }
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-euclidean-1_0-1_0-1_0-1_0-1_0-0_0-0_0-0_0}
+    }
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-euclidean-1_0-1_0-1_0-1_0-1_0-1_0-1_0-0_0}
+    }
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-euclidean-1_0-1_0-1_0-1_0-1_0-1_0-1_0-1_0}
+    }
+    \subfloat[]{
+      \includegraphics[clip,width=\columnwidth]{eval-manhattan-1_0-1_0-1_0-1_0-1_0-0_0-0_0-0_0}
+    }
+
+    \caption{Results.}
+    \label{fig:results}
+\end{figure}
+
+
+
+
+
+
+
 The test has showed that it is possable to classify a noisy, different audio strength Bofink compared to a database with no noize and high quality audio sounded birds.
 
 The tests shows that using euclidian and manhattan distance does not yield accurate results.
