--- a/report/method.tex
+++ b/report/method.tex
@@ -8,7 +8,7 @@ input signal and CBR was used for the classification.
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.5\textwidth]{feature_tree}
+\includegraphics[width=0.5\textwidth]{feature_tree2}
 \caption{Overall approach. Audio signal is the source of all information. The normal lines are transforming data and the dashed lines are the features being used.}
 \label{fig:approach}
 \end{figure}
