--- a/report/method.tex
+++ b/report/method.tex
@@ -25,6 +25,7 @@ is calculated and the results are visualized in Figure~\ref{fig:periodogram}.
 The highest peaks from the power spectral density shown in Figure~\ref{fig:periodogram_peaks} were found
 by using the Matlabs FindPeaks function. These peaks are used as features and additional feature extraction shown in Figure~\ref{fig:approach}.
 
+The described procedure is repeated for each audio recording file.
 
 \begin{figure}[htp]
     \subfloat[A window scanning the original audio recording.]{
@@ -54,6 +55,12 @@ by using the Matlabs FindPeaks function. These peaks are used as features and ad
 
 
 \subsection{Case matching algorithm}
+The class and the features
+(Class, FFT Area, FFT Area Delta, FFT Peak 1, FFT Peak 2, FFT Peak 1 Delta, Mean, STD, ZCR)
+are stored row-wise in a file. This will be the database of cases.
+The class Bluethroat2 is removed from the database and put into another file, that will be the sample file.
+Then each sample are compared with the database with a distance functions (Eeucledian, Manhattan, Canberra).
+
 The files created with the Periodogram are then put where the CBR can find them.
 Before the CBR can be run, the frames that are to be tested have to be
 speciefied, the program will then compare the features in this frame to the
