--- a/report/summary.tex
+++ b/report/summary.tex
@@ -17,4 +17,6 @@ the the database would increase the precision of the system and when that happen
 the user can test for classification of other animals such as whales or dogs.
 
 With higher reliability, this system could be used for people with hearing impairment
-in order to hear the sound of different subjects by using vibration motors. 
+in order to hear the sound of different subjects by using vibration motors. Another application
+would be surveillance system for detecting signicant
+audio events such as glass brake, gunshot, siren, etc.
