More result text

--- a/report/results.tex
+++ b/report/results.tex
@@ -96,7 +96,7 @@ represent different weight and distance function configurations.
     \subfloat[Manhattan. \fontfamily{qcr}\selectfont \newline 1.0 * FFT Area \newline 1.0 * FFT Area Delta \newline 1.0 * Peak 1 \newline 1.0 * Peak 2 \newline 1.0 * Peak 1 Delta]{
       \includegraphics[clip,width=0.4\columnwidth]{eval-manhattan-1_0-1_0-1_0-1_0-1_0-0_0-0_0-0_0}
     }
-    \caption{}
+    \caption{As we can see these outputs mostly Chaffinch bird which is the wrong one. Using all features does not work.}
     \label{fig:results6}
 \end{figure}
 
